Stick nav on mobile, fixed nav on desktop

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -16,6 +16,10 @@ img {
   color: var(--white);
   border-bottom: 1px solid var(--yellow);
   padding: 10px 30px;
+  position: fixed !important;
+  top: 0px;
+  width: 100vw;
+  z-index: 2;
 }
 
 .menu-brand {
@@ -53,7 +57,7 @@ img {
   margin: 0;
   list-style: none;
   /* Doesn't work */
-  transition: all 1s linear;
+  /* transition: all 1s linear; */
 }
 
 .menu ul li {
@@ -62,7 +66,7 @@ img {
 
 .menu ul li a {
   color: var(--white);
-  transition: all 0.3s;
+  transition: opacity 0.3s;
 }
 
 .nav-icon {
@@ -77,6 +81,10 @@ img {
 @media (max-width: 992px) {
   .menu {
     display: block;
+    border-bottom: none;
+    position: -webkit-sticky;
+    position: sticky !important;
+    top: 0;
   }
   [aria-controls="menu-list"] {
     display: block;
@@ -86,16 +94,17 @@ img {
 
   .menu-brand {
     display: none;
+    
   }
   
   [aria-expanded="false"] ~ ul {
     display: none;
-    visibility: hidden;
+    /* max-height: 0; */
   }
 
   [aria-expanded="true"] ~ ul {
     display: block;
-    visibility: visible;
+    /* max-height: auto; */
     max-width: 150px;
     margin: auto;
 
